samples/_failures_safe/1761614179_a1488d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c887558a.c: In function ‘main’:
./samples/SAFE/__tmp_c887558a.c:137:9: error: expected declaration or statement at end of input
  137 |         size_t input_len = strlen((char*)user_input);
      |         ^~~~~~
./samples/SAFE/__tmp_c887558a.c:137:9: error: expected declaration or statement at end of input
